--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 			<version>4.13</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.3.12</version>
+		</dependency>
 	</dependencies>
 
 	<build>
